--- a/about.html
+++ b/about.html
@@ -3,14 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About me</title>
   </head>
   <body>
-    Home page
-    <ul>
-      <li>
-        <a href="./about.html">About me</a>
-      </li>
-    </ul>
+    About me: Jack1e 
   </body>
 </html>
