--- a/project.html
+++ b/project.html
@@ -6,14 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    Home page
-    <ul>
-      <li>
-        <a href="./about.html">About me</a>
-      </li>
-      <li>
-        <a href="./project.html">My project</a>
-      </li>
-    </ul>
+    first project: learning git
   </body>
 </html>
